--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
-    "clear": "docusaurus clear"
+    "clear": "docusaurus clear",
+    "spellcheck": "mdspell -r -n docs/app/**/*.md"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.75",
     "@docusaurus/preset-classic": "2.0.0-alpha.75",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
+    "markdown-spellcheck": "^1.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
