--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "spellcheck": "mdspell -r -n docs/app/**/*.md"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.75",
-    "@docusaurus/preset-classic": "2.0.0-alpha.75",
+    "@docusaurus/core": "2.0.0-beta.6",
+    "@docusaurus/preset-classic": "2.0.0-beta.6",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "markdown-spellcheck": "^1.3.1",
