--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "lendiom-docs",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start -p 3002",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "serve": "docusaurus serve",
-    "clear": "docusaurus clear",
-    "spellcheck": "mdspell -r -n docs/app/**/*.md"
-  },
-  "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.6",
-    "@docusaurus/preset-classic": "2.0.0-beta.6",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
-    "markdown-spellcheck": "^1.3.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "lendiom-docs",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "docusaurus": "docusaurus",
+        "start": "docusaurus start -p 3002",
+        "build": "docusaurus build",
+        "swizzle": "docusaurus swizzle",
+        "deploy": "docusaurus deploy",
+        "serve": "docusaurus serve",
+        "clear": "docusaurus clear",
+        "spellcheck": "mdspell -r -n docs/app/**/*.md"
+    },
+    "dependencies": {
+        "@docusaurus/core": "2.0.0-beta.6",
+        "@docusaurus/preset-classic": "2.0.0-beta.6",
+        "@mdx-js/react": "^1.6.22",
+        "clsx": "^1.1.1",
+        "react": "^16.8.4",
+        "react-dom": "^16.8.4"
+    },
+    "devDependencies": {
+        "markdown-spellcheck": "^1.3.1"
+    },
+    "browserslist": {
+        "production": [
+            ">0.5%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
