--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
         "spellcheck": "mdspell -r -n docs/app/**/*.md"
     },
     "dependencies": {
-        "@docusaurus/core": "2.0.0-beta.6",
-        "@docusaurus/preset-classic": "2.0.0-beta.6",
+        "@docusaurus/core": "2.4.1",
+        "@docusaurus/preset-classic": "2.4.1",
         "@mdx-js/react": "^1.6.22",
-        "clsx": "^1.1.1",
-        "react": "^16.8.4",
-        "react-dom": "^16.8.4"
+        "clsx": "^1.2.1",
+        "hast-util-is-element": "1.1.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "rehype-katex": "5",
+        "remark-math": "3"
     },
     "devDependencies": {
         "markdown-spellcheck": "^1.3.1"
